--- a/views/dashboard/layout.pug
+++ b/views/dashboard/layout.pug
@@ -27,7 +27,7 @@ html(lang='en')
           .navbar-nav
             a.nav-item.nav-link.active(href='/dashboard/article') 文章管理 
             a.nav-item.nav-link(href='/dashboard/categories') 分類管理 
-        a.nav-link(href='#') 登出
+        a.nav-link(href='/auth/signout') 登出
       block content
       footer.mt-5.py-3.bg-light.text-secondary.text-center
         | 六角學院後台管理系統
