--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,7 @@ html(lang='en')
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
-    title 六角部落格 | Bootstrap 4 繁體中文手冊
+    title 部落格
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css', integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm', crossorigin='anonymous')
     script(src="https://code.jquery.com/jquery-3.2.1.min.js")
@@ -21,4 +21,31 @@ html(lang='en')
         line-height: 1.8;
       }
   body
+    - if (articles === undefined)
+      - articles = {}
+    - if (categories === undefined)
+      - categories = {}
+    nav.navbar.navbar-expand-lg.navbar-dark(style='background-color: #00cc99;')
+      a.navbar-brand(href='/')
+        i.fa.fa-diamond(aria-hidden='true')
+        |       部落格
+      button.navbar-toggler(data-target='#navbarNavAltMarkup', data-toggle='collapse', type='button', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
+        span.navbar-toggler-icon
+      #navbarNavAltMarkup.collapse.navbar-collapse
+        .navbar-nav.ml-auto
+          each category in categories 
+            a.nav-item.nav-link(href='#')!=category.name
+              span.sr-only (current)
     block content
+    footer.bg-light.text-muted.py-5
+      .container
+        ul.list-unstyled.d-flex.justify-content-between
+          li © Copright 2017 六角部落格
+          li.ml-auto
+            a.text-info.mr-1(href='#')
+              i.fa.fa-instagram(aria-hidden='true')
+            a.text-info.mr-1(href='#')
+              i.fa.fa-facebook-square(aria-hidden='true')
+            a.text-info(href='')
+              i.fa.fa-twitter(aria-hidden='true')
+
