--- a/views/dashboard/categories.pug
+++ b/views/dashboard/categories.pug
@@ -4,6 +4,9 @@ block content
   .main.container-fluid.my-4
     .row.justify-content-center
       .col-md-6
+        if (hasInfo) 
+          each prop in messages
+            div.alert.alert-warning= prop
         table.table
           thead
             tr
@@ -11,14 +14,16 @@ block content
               th 路徑
               th(width='30')
           tbody
-            tr
-              td.align-middle 心得
-              td
-                input.form-control.form-control-sm(type='text', value='mind')
-              td.align-middle
-                form(method='POST')
-                  button.btn.btn-outline-danger.btn-sm(type='submit') 刪除
-        form(method='POST')
+            if (categories)
+              each item, index in categories
+                tr
+                  td.align-middle= item.name
+                  td
+                    input.form-control.form-control-sm(type='text', value=item.path)
+                  td.align-middle
+                    form(method='POST' action="/dashboard/categories/delete/"+index)
+                      button.btn.btn-outline-danger.btn-sm(type='submit') 刪除
+        form(method='POST' action="/dashboard/categories/create")
           table.table
             tr
               td.align-middle 新增
