--- a/views/error.pug
+++ b/views/error.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+  .hex-blog
+    .row.justify-content-center
+      .col-md-9
+        h1!= title
