--- a/views/post.pug
+++ b/views/post.pug
@@ -1,10 +1,12 @@
 extends layout
 
 block content
+  - if (article === undefined)
+    - article = {}
   nav.navbar.navbar-expand-lg.navbar-dark(style='background-color: #00cc99;')
     a.navbar-brand(href='/')
       i.fa.fa-diamond(aria-hidden='true')
-      |       六角部落格
+      |       部落格
     button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNavAltMarkup', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
       span.navbar-toggler-icon
     #navbarNavAltMarkup.collapse.navbar-collapse
@@ -28,26 +30,17 @@ block content
       .row.justify-content-center
         .col-md-9
           // artical header
-          h1.text-primary 補充課程：Sass 與 includePaths
+          h1.text-primary!= article.title
           .d-flex.flex-row.text-secondary.small
             .p-2
               i.fa.fa-user-o(aria-hidden='true')
               |  卡斯伯
-            .p-2 2018/01/04
+            .p-2= moment(article.update_time*1000).format("YYYY/MM/DD")
             .p-2
               i.fa.fa-tag(aria-hidden='true')
-              a.text-info(href='')
-                | 沒有分類
+              a.text-info(href='')!= categories[article.category].name
           article.text-dark.post.mb-4
-            p
-              | [程式][PHP] HTML 表單(
-              em Form
-              | )以陣列(
-              em Array
-              | )方式傳遞<
-              em input
-              |  type='text'>資訊。 什麼時候會用到這樣的方法，我無法明確表達，可能要靠你自己想像。 我遇到的狀況是要讓user不斷的新增商品與價格。 第一種做法： ...
-          // 留言
+            p!= article.content
           .card.mb-3
             .card-body
   footer.bg-light.text-muted.py-5
