--- a/views/dashboard/layout.pug
+++ b/views/dashboard/layout.pug
@@ -4,7 +4,7 @@ html(lang='en')
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible', content='ie=edge')
-    title 商務控制後台
+    title 後台
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css', integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm', crossorigin='anonymous')
     script(src='https://code.jquery.com/jquery-3.2.1.min.js')
@@ -30,6 +30,6 @@ html(lang='en')
         a.nav-link(href='/auth/signout') 登出
       block content
       footer.mt-5.py-3.bg-light.text-secondary.text-center
-        | 六角學院後台管理系統
+        | 管理系統
   
     
